# RobCalibrator

./: .gitignore  CMakeLists.txt  README.md  vtk_point_display.cpp
cmake/: WinResource.cmake
data/: CalibrationFactory.xml  Settings.ini
data/ScanData/: 10_3C_line.yml  1_3C_line.yml  4_3C_line.yml  8_3C_line.yml  CalibConfig.json  RobPoses.rob  calibration.sec  p1.yml  p10.yml  p11.yml  p12.yml  p13.yml  p14.yml  p15.yml  p2.yml  p3.yml  p4.yml  p5.yml  p6.yml  p7.yml  p8.yml  p9.yml
data/ScanData/ball/: 5_3C_line.yml  6_3C_line.yml  robpose.txt
data/ScanData/board/: 10_3C_line.yml  11_3C_line.yml  12_3C_line.yml  1_3C_line.yml  2_3C_line.yml  3_3C_line.yml  4_3C_line.yml  5_3C_line.yml  6_3C_line.yml  7_3C_line.yml  8_3C_line.yml  9_3C_line.yml  rob2board.txt
data/ScanData/tmp/: 2_3C_line.yml  3_3C_line.yml  7_3C_line.yml  9_3C_line.yml  calibration.sec  calibration.sec.back
data/ScanData/tmp/10.30/: RobPoses.rob  Robot.txt  calibration.sec  p13.yml  p3.yml  p6.yml  p9.yml
docs/: UsageGuide.docx  logo.vsdx  readme.md  软件UI版面设计.vsdx
docs/figs/: 软件UI版面设计.vsdx
example/: CMakeLists.txt
example/MainWindowExample/: CMakeLists.txt  mainwindow.cpp  thQVTKOpenGLNativeWidget.cpp  thQVTKOpenGLNativeWidget.h  thinteractorstyletrackballcamera.cpp
example/QtPropertyBrowserExample/: CMakeLists.txt
example/UseDesginerMainWindowExample/: CMakeLists.txt
example/vtkViewerTest/: CMakeLists.txt  main.cpp  vtkView.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  startupprogresswindow.cpp  startupprogresswindow.h
src/SfrCalibLibs/: CMakeLists.txt
src/SfrCalibLibs/Calibrator/: CMakeLists.txt  algorithm.cpp  algorithm.h  calibrator.cpp  calibrator.h  common.h  data_processor.cpp  data_processor.h  utils.cpp  utils.h
src/SfrCalibLibs/Calibrator/demo/: demo_ball.cpp  demo_board.cpp
src/SfrCalibLibs/CamManager/: CMakeLists.txt  SFRSensorManager.cpp  SFRSensorManager.h  SFRSensorManager.ui  camera.cpp  camera.h  grabThread.cpp  grabThread.h  sszn.cpp  sszn.h
src/SfrCalibLibs/CamManager/demo/: main.cpp
src/SfrCalibLibs/QtAdvancedDocking/: CMakeLists.txt
src/SfrCalibLibs/QtDataViewer/: CMakeLists.txt  ChartViewer.cpp  ChartViewer.h  ImageViewer.cpp  QVtkViewer.cpp  QtDataViewer.qrc  StyleTrackballCamera.cpp  StyleTrackballCamera.h
src/SfrCalibLibs/QtImgViewer/: CMakeLists.txt
src/SfrCalibLibs/QtPropertyBrowser/: CMakelists.txt  qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.qrc  qtpropertymanager.cpp  qtpropertymanager.h
src/SfrCalibLibs/QtVTKviewer/: CMakeLists.txt  QVtkViewer.cpp  QVtkViewer.h  thQVTKOpenGLNativeWidget.cpp  thQVTKOpenGLNativeWidget.h  thinteractorstyletrackballcamera.h
src/SfrCalibLibs/SARibbonBar/: CMakeLists.txt  SAFramelessHelper.h  SARibbonBar.cpp  SARibbonCategory.cpp  SARibbonCtrlContainer.cpp  SARibbonQuickAccessBar.cpp
src/resource/: default.qss
src/sandbox/: CMakeLists.txt  data_processor.cpp  data_processor.h  mainwindow.cpp
src/tmp/: mainwindow.h  mainwindow.qrc
